Extract RFC authors

--- a/tests/_pages/rfc.html
+++ b/tests/_pages/rfc.html
@@ -15,6 +15,13 @@
                 <div class="li"> Status: Under Discussion</div>
             </li>
             <li class="level1">
+                <div class="li"> Author: Sean DuBois
+                    <a href="mailto:sean@siobud.com" class="mail" title="sean@siobud.com">sean@siobud.com</a>
+                                 , Reeze Xia
+                    <a href="mailto:reeze@php.net" class="mail" title="reeze@php.net">reeze@php.net</a>
+                </div>
+            </li>
+            <li class="level1">
                 <div class="li"> First Published at:
                     <a href="http://wiki.php.net/rfc/class_const_visibility" class="urlextern" title="http://wiki.php.net/rfc/class_const_visibility" rel="nofollow">http://wiki.php.net/rfc/class_const_visibility</a>
                 </div>
@@ -22,7 +29,8 @@
         </ul>
     </div>
     <h2 class="sectionedit11" id="vote">Vote</h2>
-    <div class="level2"><p> Simple Yes/No option. This requires a 2/3 majority. </p>
+    <div class="level2">
+        <p> Simple Yes/No option. This requires a 2/3 majority. </p>
         <p> This vote will close on 06:00 UTC on Tuesday 2015-10-27 </p>
         <table class="inline">
             <tbody>
