--- a/tests/_pages/rfc.html
+++ b/tests/_pages/rfc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body id="">
+<body class="page">
     <h1 class="sectionedit1" id="php_rfcsupport_class_constant_visibility">PHP RFC: Support Class Constant Visibility</h1>
 
     <div class="level1">
