Work on synchronizers

--- a/tests/_pages/rfc.html
+++ b/tests/_pages/rfc.html
@@ -15,6 +15,9 @@
                 <div class="li"> Status: Under Discussion</div>
             </li>
             <li class="level1">
+                <div class="li"> JUSTFUCK MY SHIT UP</div>
+            </li>
+            <li class="level1">
                 <div class="li"> Author: Sean DuBois
                     <a href="mailto:sean@siobud.com" class="mail" title="sean@siobud.com">sean@siobud.com</a>
                                  , Reeze Xia
