--- a/tests/_pages/user.html
+++ b/tests/_pages/user.html
@@ -7,7 +7,17 @@
                 <h1 property="foaf:name">Maxime Fabre</h1>
                 <h2 property="foaf:nick">anahkiasen</h2>
             </div>
+        </div><div class="profile-main">
+        <div class="profile-name">
+            <h1 property="foaf:name">Antony Dovgal</h1>
+            <h2 property="foaf:nick">tony2001</h2>
         </div>
+        <h2 id="karma">Karma</h2>
+        <ul>
+            <li><a href="https://svn.php.net/viewvc/pear/packages" title="pear/packages ">pear/packages</a></li>
+            <li><a href="https://svn.php.net/viewvc/pear/peardoc" title="pear/peardoc ">pear/peardoc</a></li>
+        </ul>
+    </div>
     </section>
     <section class="secondscreen">
         <div class="profile-side">
