--- a/tests/_pages/rfc.html
+++ b/tests/_pages/rfc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body class="page">
+<body class="page group">
     <h1 class="sectionedit1" id="php_rfcsupport_class_constant_visibility">PHP RFC: Support Class Constant Visibility</h1>
 
     <div class="level1">
@@ -31,6 +31,10 @@
             </li>
         </ul>
     </div>
+    <h2>Something</h2>
+    <pre class="code php"><span class="kw2">function</span> <span class="br0">(</span><span class="re0">$x</span><span class="br0">)</span> <span class="br0">{</span>
+    <span class="kw1">return</span> <span class="re0">$x</span> <span class="sy0">*</span> <span class="nu0">2</span><span class="sy0">;</span>
+<span class="br0">}</span></pre>
     <h2 class="sectionedit11" id="vote">Vote</h2>
     <div class="level2">
         <p> Simple Yes/No option. This requires a 2/3 majority. </p>
