Close #18 - Change RFC status if all polls are closed

--- a/tests/_pages/rfc.html
+++ b/tests/_pages/rfc.html
@@ -42,6 +42,7 @@
         <div class="level2">
             <p> Simple Yes/No option. This requires a 2/3 majority. </p>
             <p> This vote will close on 06:00 UTC on Tuesday 2015-10-27 </p>
+            <form>
             <table class="inline">
                 <tbody>
                 <tr class="row0">
@@ -79,6 +80,7 @@
                 </tr>
                 </tbody>
             </table>
+            </form>
         </div>
     </div>
 </body>
