Close #9 - List what were the actual choices of an RFC

--- a/tests/_pages/rfc.html
+++ b/tests/_pages/rfc.html
@@ -50,8 +50,8 @@
                 </tr>
                 <tr class="row1">
                     <th class="col0">Real name</th>
-                    <td class="centeralign">Yes</td>
-                    <td class="centeralign">No</td>
+                    <td class="centeralign">Yes?</td>
+                    <td class="centeralign">No  !</td>
                 </tr>
                 <tr>
                     <td class="rightalign">
