--- a/tests/_pages/rfc.html
+++ b/tests/_pages/rfc.html
@@ -42,45 +42,60 @@
         <div class="level2">
             <p> Simple Yes/No option. This requires a 2/3 majority. </p>
             <p> This vote will close on 06:00 UTC on Tuesday 2015-10-27 </p>
+
             <form>
-            <table class="inline">
-                <tbody>
-                <tr class="row0">
-                    <th class="centeralign" colspan="3"> Class Constant Visibility</th>
-                </tr>
-                <tr class="row1">
-                    <th class="col0">Real name</th>
-                    <td class="centeralign">Yes?</td>
-                    <td class="centeralign">No  !</td>
-                </tr>
-                <tr>
-                    <td class="rightalign">
-                        <a href="//people.php.net/user.php?username=ajf">ajf</a>
-                        &nbsp;(ajf)
-                    </td>
-                    <td class="centeralign" style="background-color:#AFA"></td>
-                    <td class="centeralign" style="background-color:#FCC">
-                        <img src="/lib/images/success.png" title="2015/10/22 22:30">
-                    </td>
-                </tr>
-                <tr>
-                    <td class="rightalign">
-                        <a href="//people.php.net/user.php?username=ajf">ajf</a>
-                        &nbsp;(ajf)
-                    </td>
-                    <td class="centeralign" style="background-color:#AFA">
-                        <img src="/lib/images/success.png" title="2015/10/22 22:30">
-                    </td>
-                    <td class="centeralign" style="background-color:#FCC">&nbsp;</td>
-                </tr>
-                <tr>
-                    <th class="rightalign"><b>Count:</b></th>
-                    <th class="centeralign"><b>24</b></th>
-                    <th class="centeralign"><b>1</b></th>
-                </tr>
-                </tbody>
-            </table>
+                <table class="inline">
+                    <tbody>
+                    <tr class="row0">
+                        <th class="centeralign" colspan="3"> Class Constant Visibility</th>
+                    </tr>
+                    <tr class="row1">
+                        <th class="col0">Real name</th>
+                        <td class="centeralign">Yes?</td>
+                        <td class="centeralign">No !</td>
+                    </tr>
+                    <tr>
+                        <td class="rightalign">
+                            <a href="//people.php.net/user.php?username=ajf">ajf</a>
+                            &nbsp;(ajf)
+                        </td>
+                        <td class="centeralign" style="background-color:#AFA"></td>
+                        <td class="centeralign" style="background-color:#FCC">
+                            <img src="/lib/images/success.png" title="2015/10/22 22:30">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="rightalign">
+                            <a href="//people.php.net/user.php?username=ajf">ajf</a>
+                            &nbsp;(ajf)
+                        </td>
+                        <td class="centeralign" style="background-color:#AFA">
+                            <img src="/lib/images/success.png" title="2015/10/22 22:30">
+                        </td>
+                        <td class="centeralign" style="background-color:#FCC">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th class="rightalign"><b>Count:</b></th>
+                        <th class="centeralign"><b>24</b></th>
+                        <th class="centeralign"><b>1</b></th>
+                    </tr>
+                    </tbody>
+                </table>
             </form>
+        </div>
+        <h2 class="sectionedit14" id="changelog">Changelog</h2>
+        <div class="level2">
+            <ul>
+                <li class="level1">
+                    <div class="li"> V0.1 Initial version</div>
+                </li>
+                <li class="level1">
+                    <div class="li"> V0.2 Adopted by Sean DuBois
+                        <a href="mailto:sean@siobud.com" class="mail" title="sean@siobud.com">sean@siobud.com</a>
+                    </div>
+                </li>
+            </ul>
+
         </div>
     </div>
 </body>
