Close #25 - Link to RFC pull request if it exists

--- a/tests/_pages/rfc.html
+++ b/tests/_pages/rfc.html
@@ -33,6 +33,10 @@
                 </li>
             </ul>
         </div>
+        <h2>Path</h2>
+        <p>A pull request has been made. It is feature complete but needs review, more tests, and help with opcache changes :
+            <a href="https://github.com/php/php-src/pull/1494">https://github.com/php/php-src/pull/1494</a>
+        </p>
         <h2>Something</h2>
     <pre class="code php"><span class="kw2">function</span> <span class="br0">(</span><span class="re0">$x</span><span class="br0">)</span> <span class="br0">{</span>
     <span class="kw1">return</span> <span class="re0">$x</span> <span class="sy0">*</span> <span class="nu0">2</span><span class="sy0">;</span>
@@ -84,6 +88,7 @@
             </form>
         </div>
         <h2 class="sectionedit14" id="changelog">Changelog</h2>
+
         <div class="level2">
             <ul>
                 <li class="level1">
