Prioritize links that contain /pull

--- a/tests/_pages/rfc.html
+++ b/tests/_pages/rfc.html
@@ -33,7 +33,9 @@
                 </li>
             </ul>
         </div>
-        <h2>Path</h2>
+        <h2>Patch</h2>
+        <p>See
+            <a href="https://github.com/php/php-src/blob/b00a315806ca1ac24b3e1ff97764f9813ad664e6/ext/standard/var.c#L227">this stuff in source code</a></p>
         <p>A pull request has been made. It is feature complete but needs review, more tests, and help with opcache changes :
             <a href="https://github.com/php/php-src/pull/1494">https://github.com/php/php-src/pull/1494</a>
         </p>
