Close #60 - Add inactive status for RFCs
Signed-off-by: Maxime Fabre <ehtnam6@gmail.com>

--- a/tests/_pages/rfc2.html
+++ b/tests/_pages/rfc2.html
@@ -2,6 +2,17 @@
 <html>
 <body id="">
     <div class="page group">
+        <div class="level1">
+            <ul>
+                <li class="level1">
+                    <div class="li"> Date: 2014-11-2</div>
+                </li>
+                <li class="level1">
+                    <div class="li"> Status: Under Discussion</div>
+                </li>
+            </ul>
+        </div>
+
         <h2 class="sectionedit4" id="changelog">Changelog</h2>
 
         <div class="level2"><p> 21-Dec-2013: </p>
