Close #61 - Fix truncated RFCs

--- a/tests/_pages/rfc2.html
+++ b/tests/_pages/rfc2.html
@@ -40,6 +40,24 @@
                 </li>
             </ul>
         </div>
+
+        <h2 class="sectionedit13" id="discussion_on_the_list">Discussion on the List</h2>
+
+        <div class="level2">
+            <ol>
+                <li class="level1">
+                    <div class="li"> 2005-02-09 :
+                        <a href="http://markmail.org/message/2bnwe77ie3yhc65i" class="urlextern" title="http://markmail.org/message/2bnwe77ie3yhc65i" rel="nofollow">Similar discussion back in 2005</a>
+                    </div>
+                </li>
+                <li class="level1">
+                    <div class="li"> 2010-05-03 :
+                        <a href="http://markmail.org/message/a3df3nt7hyn4qsne" class="urlextern" title="http://markmail.org/message/a3df3nt7hyn4qsne" rel="nofollow">Initial discussion about this RFC</a>
+                    </div>
+                </li>
+            </ol>
+
+        </div>
         <h2 class="sectionedit5" id="discussion">Discussion</h2>
 
         <div class="level2">
