Show targeted/implemented version of RFCs
* Add targeted PHP version extraction
* Add field to Request

--- a/tests/_pages/rfc.html
+++ b/tests/_pages/rfc.html
@@ -89,6 +89,14 @@
                 </table>
             </form>
         </div>
+
+        <h2 class="sectionedit9" id="proposed_php_version">Proposed PHP Version</h2>
+        <div class="level2">
+            <p>
+                7.1
+            </p>
+        </div>
+
         <h2 class="sectionedit14" id="changelog">Changelog</h2>
 
         <div class="level2">
