--- a/tests/_pages/rfc2.html
+++ b/tests/_pages/rfc2.html
@@ -13,6 +13,13 @@
             </ul>
         </div>
 
+        <h2 class="sectionedit4" id="proposed_php_version_s">Proposed PHP Version(s)</h2>
+        <div class="level2">
+            <p>
+                This proposed for the next PHP 7.x.
+            </p>
+        </div>
+
         <h2 class="sectionedit4" id="changelog">Changelog</h2>
 
         <div class="level2"><p> 21-Dec-2013: </p>
